# ASLEducator

./: .gitignore  Dockerfile.prod  README.md  STATE.md  docker-compose.yml  init.sql  render.yaml  run_ml_pipeline.sh  start_prod.sh
backend/: Cargo.toml  Dockerfile  schema.sql
backend/src/: auth.rs  main.rs
backend/src/api/: feedback.rs  inference.rs  mod.rs  stats.rs  vocabulary.rs
ml/: .dockerignore  Dockerfile  download_data.py  dtw_engine.py  main.py  pipeline_step1_data.py  pipeline_step2_train.py  prune_landmarks.py  pyproject.toml  retrain_loop.py  simulate.py  sync_data.sh  test_cosine.py  test_dtw.py  tune_thresholds.py
ml/data/landmarks/about/: 00412.npy  00422.npy  00423.npy  00424.npy
ml/data/landmarks/accept/: 00588.npy  00601.npy
ml/data/landmarks/accident/: 00618.npy  00635.npy
ml/data/landmarks/adult/: 01194.npy  01215.npy
ml/data/landmarks/africa/: 01382.npy  01392.npy  01393.npy  01394.npy  01395.npy
ml/data/landmarks/after/: 01411.npy  01426.npy
ml/data/landmarks/afternoon/: 01429.npy  01440.npy  70279.npy
ml/data/landmarks/again/: 01457.npy  01467.npy  01468.npy  01469.npy  70219.npy
ml/data/landmarks/age/: 01482.npy  01491.npy  01493.npy
ml/data/landmarks/ago/: 01551.npy
ml/data/landmarks/all/: 01912.npy  01995.npy  01996.npy  01997.npy  02000.npy  68001.npy
ml/data/landmarks/allow/: 02041.npy  02050.npy
ml/data/landmarks/alone/: 02102.npy
ml/data/landmarks/always/: 02227.npy  02234.npy  02235.npy  02236.npy  70037.npy
ml/data/landmarks/america/: 02348.npy  02354.npy  (+1 more)
ml/models/: asl_model.keras  label_map.txt
(+1586 files in other folders)
